# OndaCollider

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat  build.sh
.github/workflows/: pluginbuild.yml
examples/: dualOsc.onda  dualOsc.scd  fxChain.onda  fxChain.scd  lorenz.onda  lorenz.scd  svf.onda  svf.scd  syncGranulator.onda  syncGranulator.scd  syncGranulatorDual.onda  syncGranulatorDual.scd
plugins/Onda/: Onda.cpp  Onda.hpp  Onda.sc  Onda.schelp  OndaDef.schelp
scripts/: fetch-onda.ps1  fetch-onda.sh
